Исправляет бг у страницы статьи

--- a/source/sass/blocks/article-page.scss
+++ b/source/sass/blocks/article-page.scss
@@ -1,8 +1,14 @@
 .article-page {
-  position: relative;
-  background: url("../img/bg/bg-lines.png") no-repeat;
-  background-position: top;
-  background-size: 764px cover;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 764px;
+    background: url("../img/bg/bg-lines.png") no-repeat;
+    background-position: top;
+    background-size: cover;
+  }
 }
 
 .article-page__container {
