--- a/source/sass/blocks/file.scss
+++ b/source/sass/blocks/file.scss
@@ -81,6 +81,9 @@
   align-items: center;
 
   p {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 21px;
     margin-right: 20px;
 
     @include viewport--sm {
