Исправляет Виджет и слайдер на главной

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -110,6 +110,10 @@
   max-width: 480px;
   margin-right: 15px;
 
+  @include viewport--lg {
+    max-width: 800px;
+  }
+
   @include viewport--sm {
     position: absolute;
     top: 213px;
